k3s/manifests/frontend-middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-acl
  namespace: techietenka
spec:
  stripPrefix:
    prefixes:
      - /api/acl
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-files
  namespace: techietenka
spec:
  stripPrefix:
    prefixes:
      - /api/files
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-email
  namespace: techietenka
spec:
  stripPrefix:
    prefixes:
      - /api/email
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-shared
  namespace: techietenka
spec:
  stripPrefix:
    prefixes:
      - /api/shared

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-payments
  namespace: techietenka
spec:
  stripPrefix:
    prefixes:
      - /api/payments

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress-artifacts
  namespace: techietenka
spec:
  compress: {}
